--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-github-btn": "^1.4.0",
     "react-google-button": "^0.7.2",
     "react-modal": "^3.15.0",
+    "react-paginate": "^8.1.4",
     "react-rnd": "^10.3.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
