--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@peerboard/core": "^0.0.25",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -14,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-github-btn": "^1.4.0",
     "react-google-button": "^0.7.2",
+    "react-iframe": "^1.8.5",
     "react-modal": "^3.15.0",
     "react-paginate": "^8.1.4",
     "react-rnd": "^10.3.7",
